# wreq-util

./: .gitignore  Cargo.toml  README.md
examples/: emulation.rs  emulation_option.rs  emulation_rand.rs
src/: lib.rs
src/emulation/: mod.rs  rand.rs
src/emulation/device/: chrome.rs  firefox.rs  macros.rs  mod.rs  okhttp.rs  opera.rs  safari.rs
tests/: client.rs  emulation_chrome.rs  emulation_firefox.rs  emulation_okhttp.rs  emulation_opera.rs  emulation_safari.rs
tests/support/: delay_server.rs  mod.rs  server.rs
